[package]
name = "d2_minify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_alloc = "0.4.0"
num_enum = "0.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_repr = "0.1.12"
wasm-bindgen = { version = "0.2.84" }

[lib]
crate-type = ["cdylib", "rlib"]
