[package]
name = "d2_minify"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/D2-Insight/d2_minify"
description = "A library to shrink destiny 2 item structs without hurting performance."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_alloc = "0.4.0"
num_enum = "0.6.1"
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_repr = {version = "0.1.12", optional = true}
wasm-bindgen = { version = "0.2.84" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde = ["dep:serde", "dep:serde_repr"]
pre_gen = ["serde"]

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
strip = true
codegen-units = 1